css/style.css
/******************************************************************************/
/**************************** Variables definition ****************************/
/******************************************************************************/
:root{
    /* Background variables */
    --bg-body: #ffffff;
    --bg-header: #ffffff;
    --bg-hero-free-trial: #b4d0e7;
    --bg-footer: #000000;
    --bg-logo-designIt: #a2d39b;
    --bg-logo-asu: #61082b;
    --bg-logo-ufFlorida: #0093ce;
    --bg-logo-topps: #ff1c1c;
    --bg-logo-worldBicycleRelief: #d5001f;
    --bg-logo-hearst: #b4d0e7;
    --bg-logo-lonelyPlanet: #0d2481;
    --bg-logo-clearChannelOutdoor: #ffd830;
    --bg-btn-default: #ffffff;
    --bg-btn-special: #0061ff;

    /* Text colors variables */
    --txt-body: #000000;
    --txt-footer: #ffffff;
    --txt-footer-languages: #9b9a9b;
    --txt-special: #61082b;
    --txt-btn-default: #000000;
    --txt-btn-special: #ffffff;

    /* Border variables */
    --bdr-header: #d1d9e1;
    --bdr-btn-default: #000000;
    --bdr-btn-special: transparent;

    /* Hover variables */
    --bg-hover-header: #f2eee8;
    
    /* Size variables */
    --fs-body: 1rem;
    --fs-btn: 0.9rem;
}

/***************************************************************/
/**************************** Reset ****************************/
/***************************************************************/
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*****************************************************************/
/**************************** General ****************************/
/*****************************************************************/
html{
    scroll-behavior: smooth;
}
.debug{
    border: 1px solid red;
}
body{
    font-family: 'Open Sans', sans-serif;
    font-size: var(--fs-body);
    color: var(--txt-body);
}
main{
    width: 100%;
}
.margin-auto{
    margin: 0 auto;
}
.main-container{
    max-width: 1200px;
}
.small-container{
    max-width: 1000px;
}

/*****************************************************************/
/**************************** Flexbox ****************************/
/*****************************************************************/
.d-flex{
    display: flex;
    flex-flow: row wrap;
    align-content: flex-start;
    justify-content: space-between;

}
.d-flex ul .d-f-align-items-center{
    align-items: center;
}
.gap-1rem{
    gap: 1rem;
}

/*****************************************************************/
/**************************** Buttons ****************************/
/*****************************************************************/
.btn-default{
    background-color: var(--bg-btn-default);
    color: var(--txt-btn-default);
    border: 1px solid var(--bdr-btn-default);
    font-size: var(--fs-btn);
    padding: 7px 12px;
}
.btn-special{
    background-color: var(--bg-btn-special);
    color: var(--txt-btn-special);
    border: 1px solid var(--bdr-btn-special);
    font-size: var(--fs-btn);
    padding: 7px 12px;
}

/*****************************************************************/
/****************************** Main *****************************/
/**************************** General ****************************/
/*****************************************************************/
main{
    padding-top: 96px;
}
main #hero, main #free-trial{
    background-color: var(--bg-hero-free-trial);
}

/*****************************************************************/
/**************************** Header ****************************/
/*****************************************************************/
header{
    background-color: var(--bg-header);
    width: 100%;
    min-height: 50px;
    position: fixed;
    top: 0;
    z-index: 1000;
    border-bottom: 2px solid var(--bdr-header);
    padding: 1.2rem 1rem 1rem 1rem;
}
header nav ul{
    list-style: none;
}
header nav ul li a{
    text-decoration: none;
    color: var(--txt-body);
}

/*****************************************************************/
/****************************** Hero *****************************/
/*****************************************************************/
main #hero{
    
}

/*****************************************************************/
/**************************** Footer ****************************/
/*****************************************************************/
footer{
    background-color: var(--bg-footer);
    color: var(--txt-footer);
}

